# inventory

./: .gitignore  CMakeLists.txt  PersonalInventory.sln  README.md
Client/: Client.vcxproj  main.cpp
Server/: Server.vcxproj  Server.vcxproj.filters  crc32.h  main.cpp
Server/handlers/: apihandler.h  authhandler.h  autoregisteringhandler.h  basehandler.h  loginhandler.cpp  userhandler.cpp  userhandler.h
Server/managers/: usermanager.cpp
Server/objectmodel/: api.cpp  api.h  error.h  info.cpp  info.h  user.cpp  user.h
Server/utilities/: fileutilities.h
cli/: cli.vcxproj  main.cpp
libsnap/: libsnap.vcxproj  libsnap.vcxproj.filters  serialization.h
libsnap/include/libsnap/: api.h  error.h  info.h  login.h  object.h  objects.h  session.h  user.h
libsnap/objectmodel/: api.cpp  info.cpp  login.cpp  object.cpp  session.cpp  user.cpp
snapd/: database.cpp  database.h  main.cpp  snapd.vcxproj  snapd.vcxproj.filters  stdafx.h
snapd/handlers/: apihandler.h  authhandler.cpp  authhandler.h  autoregisteringhandler.cpp  infohandler.h  loginhandler.cpp  loginhandler.h  userhandler.cpp  userhandler.h
snapd/managers/: usermanager.h
snapd/objectmodel/: api.cpp  info.h
snapd/utilities/: mutexutilities.h
